# PaperMint

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  knowledge_graph.sqlite3  knowledge_graph.sqlite3-shm  knowledge_graph.sqlite3-wal  package-lock.json  package.json  skills-lock.json  tsconfig.app.json  vite.config.ts
.lancedb/semantic_chunks.lance/_transactions/: 0-940e53a9-4db2-4661-95ec-9818b98318b0.txn  1-708edddd-5bfa-4696-9aaa-6a317ea70004.txn  10-466919ac-b9ad-4437-bb48-7bce04fe714a.txn  100-bcaf2955-00de-4fbe-98d0-132939b218a6.txn  101-f5da3b5d-41c8-4b9d-8549-70dd8f599d89.txn  102-a9c3548f-f9d4-4187-9b6b-15b56864d93f.txn  103-2705d9d4-2d66-41a3-9334-c1db950ee62c.txn  104-284f3bc3-4244-4b3c-aec0-66cbb278e2ea.txn  105-95c9501c-628b-4bea-8767-2c46be079436.txn  106-341022d1-0526-4711-8086-4a34d2fb5946.txn  107-b1baf8d0-3ec5-4c94-a658-c4c343b29584.txn  108-9ea64258-f475-47dd-8a47-3694486dfd7e.txn  109-ce4290aa-9b68-4b26-8608-efd33a5b298e.txn  11-21b51d92-5531-4b05-b17c-b4979755defa.txn  110-bcc31812-e218-41e7-aa4e-cb67713a0265.txn  111-18ab1d2d-7b8a-4ac3-b2a9-b00bffec3c9d.txn  112-fb30f6bf-04db-4c79-9bba-60e01244b3bd.txn  (+295 more)
docs/: data-model.md  export-notes.md  mvp-plan.md  release-checklist.md  release-readiness-audit.md
src/: App.linuxGuiTemplate.test.tsx  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/export/: mod.rs
src-tauri/src/fs/: mod.rs
src/app/router/: index.tsx
src/styles/: paper.css
src/types/: exam.ts
(+463 files in other folders)
